<resources>
    <string name="app_name">TipCalculatorApp</string>
    <string name="price">Bill Amount : $</string>
    <string name="tip">Tip : %</string>
    <string name="person">Divide By :</string>
    <string name="percent0">0 %</string>
    <string name="poor">Poor</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="round_up">Round Up :</string>
    <string name="hint_person">how many people?</string>
    <string name="hint_roundUp">to whole dollars?</string>
    <string name="answer_tip">Tip Total : $</string>
    <string name="answer_each_person">Tip Each Person : $</string>
    <string name="answer_total">Total (Bill + Tip) : $</string>
    <string name="answer_total_each">Total Each Person : $</string>
    <string name="tipDescription_poor">Poor</string>
    <string name="tipDescription_acceptable">Acceptable</string>
    <string name="tipDescription_good">Good</string>
    <string name="tipDescription_great">Great</string>
    <string name="tipDescription_amazing">Amazing</string>
    <string name="default_amount">0</string>
    <string name="default_people">1</string>
    <string name="msg">MADE WITH 💖 BY FEIGO</string>
    <string name="default_price">0.00</string>
</resources>